# EmbeddedSdk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/HelloTasks/: main.c
examples/TcpEchoClientServer/: main.c
tools/cmake/modules/: FindFreeRTOS.cmake  FindPCap.cmake  FreeRTOSIPConfig.h  FreeRTOSIPConfigDefaults.c
